--- a/style.css
+++ b/style.css
@@ -1,17 +1,20 @@
 body {
-    background-color: #4287f5;
-    color: white;
-    display: flex;
-    justify-content: center;
+  background-color: #4287f5;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .container {
-    width: 90%;
-    padding-left: 45%;
-    padding-top: 200px;
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
 button {
-    border: 1px solid rgba(0, 0, 0, 0.3);
-    width: 150px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  width: 150px;
 }
