--- a/pages/login/style.css
+++ b/pages/login/style.css
@@ -1,41 +1,47 @@
 html {
-    width: 100%;
-    height: 100%;
-    overflow-y: hidden;
+  width: 100%;
+  height: 100%;
+  overflow-y: hidden;
 }
 
 body {
-    background-color: lightgreen;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+  background-color: lightgreen;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
 form {
-    width: 70%;
+  width: 70%;
+}
+
+input::placeholder {
+  padding-left: 3px;
 }
 
 .login-container {
-    background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 300px;
-    height: 300px;
-    box-shadow: black 10px;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  height: 300px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .input-style {
-    margin-bottom: 10px;
-    border: solid 0px;
-    background-color: lightgray;
-    height: 40px;
-    width: 100%;
+  margin-bottom: 10px;
+  border: solid 0px;
+  box-sizing: border-box;
+  background-color: lightgray;
+  height: 40px;
+  width: 100%;
 }
 
 #submit-button {
-    background-color: lightgreen;
-    color: white;
-    text-transform: uppercase;
+  background-color: lightgreen;
+  color: white;
+  text-transform: uppercase;
+  width: 100%;
 }
